# create-job-jenkins-python

./: .env.example  .gitignore  README.md  create_job.py  jenkins_session.py  main.py  pyproject.toml
